k8-serviceapi.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: k8-nagp-app
  labels:
    app: k8-nagp-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: k8-nagp-app

  template:
    metadata:
      labels:
        app: k8-nagp-app
    spec:
      containers:
        - name: k8-deployment
          image: ravi1387/k8-nagp:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
# Define a 'Service' To Expose service tier to Other Services

apiVersion: v1
kind: Service
metadata:
  name: k8-nagp-service
  labels:
    app: k8-nagp-service
    tier: service
spec:
  selector:
    app: k8-nagp-app
  ports:
    - protocol: "TCP"
      targetPort: 8080
      port: 8080
      nodePort: 30080
  type: NodePort
