app-ingress.yaml
#apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8app-ingress
  # annotations:
  #   kubernetes.io/ingress.class: nginx
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: k8crudapp.info
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: k8-nagp-service
                port:
                  number: 8080
